<resources>
    <string name="app_name">MovieMeeting</string>
    <string name="loginLabel">login</string>
    <string name="passwordHint">mot de passe</string>
    <string name="connectButton">connect</string>
    <string name="join_us">rejoignez-nous</string>
    <string name="repeat_pswd">vérification mot de passe</string>
    <string name="moviemeeting">MovieMeeting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meetings_list">MeetingsListActivity</string>
    <string name="title_activity_new_meeting">NewMeetingActivity</string>
    <string name="title_of_meeting">Titre de l\'évènement</string>
    <string name="my_event_title">Titre de mon évènement</string>
    <string name="str_no_meetings">Il n\'y a aucun évènement pour ce film</string>
    <string name="str_already_on_meeting">Vous êtes déja sur cet évènement !</string>
    <string name="str_join_meeting">Rejoindre l\'évènement</string>
    <string name="str_quit_meeting">Quitter l\'évènement</string>
</resources>
