<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/yellow_gradient"
    >

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:src="@mipmap/ic_foreground_popcorn"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/tvw_titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moviemeeting"
        android:textSize="30sp"

        android:textColor="@color/colorWhiter"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cstrlyt_login" />


    <!-- le second layout assure que le contenu est bien centré -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cstrlyt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/loginField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textColorHint="@color/colorWhiter"
            android:textColor="@color/colorWhiter"
            android:ems="10"
            android:hint="@string/loginLabel"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pswdField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textColorHint="@color/colorWhiter"
            android:textColor="@color/colorWhiter"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginField" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/connectButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pswdField" />

        <Button
            android:id="@+id/buttonToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"/>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonToRegister" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"

            app:layout_constraintTop_toBottomOf="@+id/pswdField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>